Implementació de proves Junit: MetaExpedient
Eliminats tests obsolets que donaven error al compilar.